minor spacing fix for video

--- a/rgb.css
+++ b/rgb.css
@@ -23,6 +23,10 @@
     width: 100%;
 }
 
+#video {
+    padding: 2% 0;
+}
+
 #time {
     background-color: #333;
     padding: 4% 0;
